deploy/grpc-arithmetic-service-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-arithmetic-service
  annotations:
    linkerd.io/inject: enabled
