deploy/client-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-deployment
  namespace: grpc-arithmetic-service
  labels:
    app: grpc-client
spec:
  selector:
    matchLabels:
      app: grpc-client
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
        - name: grpc-client
          image: grpc-client:latest
          imagePullPolicy: Never
          ports:
            - name: grpc-client
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: grpc-arithmetic-service
spec:
  type: ClusterIP
  selector:
    app: grpc-client
  ports:
    - port: 80 # ClusterIP port
      targetPort: 8080 # Container port on the pod
