deploy/grpc-arithmetic-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-arithmetic-ingress
  namespace: grpc-arithmetic-service
spec:
  tls: # remove if you don't want HTTPS
    - hosts:
        - arithmeticgrpc.com
      secretName: grpc-arithmetic-tls
  rules:
    - host: arithmeticgrpc.com
      http:
        paths:
          - backend:
              serviceName: grpc-client-service
              servicePort: 80
